<resources>
    <string name="app_name">App Portfolio | cpachono</string>

    <string name="nanodegree_apps">Android Developer | Nanodegree Apps</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="football_scores">Football Scores</string>
    <string name="library">Library</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone">Capstone: My Own App</string>
    <string name="toast_spotify_streamer">This button will launch my Spotify Streamer app!</string>
    <string name="toast_football_scores">This button will launch my Football Scores app!</string>
    <string name="toast_library">This button will launch my Library app!</string>
    <string name="toast_build_it_bigger">This button will launch my Build It Bigger app!</string>
    <string name="toast_xyz_reader">This button will launch my XYZ Reader app!</string>
    <string name="toast_capstone">This button will launch my Capstone app!</string>

</resources>
